--- a/docs/api/camera.mdx
+++ b/docs/api/camera.mdx
@@ -26,6 +26,18 @@ Indicates whether the object is destroyed (true) or not (false).
 ### string type {#string-type}
 Specifies the object's type as a string, useful for type identification.
 
+### boolean Active {#boolean-Active}
+
+### boolean ActiveInHierarchy {#boolean-ActiveInHierarchy}
+
+### Object Object {#Object-Object}
+
+### boolean IsDestroyed {#boolean-IsDestroyed}
+
+### string Type {#string-Type}
+
 ### number fovY {#number-fovY}
 Defines the vertical field of view in degrees
+
+### Transform transform {#Transform-transform}
 
