--- a/docs/api/component.mdx
+++ b/docs/api/component.mdx
@@ -24,3 +24,13 @@ All components inherit from this class. It is not meant to be instantiated direc
 
 ### string type {#string-type}
 
+### boolean Active {#boolean-Active}
+
+### boolean ActiveInHierarchy {#boolean-ActiveInHierarchy}
+
+### Object Object {#Object-Object}
+
+### boolean IsDestroyed {#boolean-IsDestroyed}
+
+### string Type {#string-Type}
+
