--- a/docs/api/config.mdx
+++ b/docs/api/config.mdx
@@ -49,7 +49,7 @@ Config:SetFloat(id.."/MyGame/Highscore", highscore)
 
 ### boolean Exists(string) {#boolean-Exists-string}
 
-### nil EmitChangeSignal() {#nil-EmitChangeSignal}
+### nil Save() {#nil-Save}
 force saving Config
 
 ### integer GetInt(string) {#integer-GetInt-string}
