--- a/docs/api/meshData.mdx
+++ b/docs/api/meshData.mdx
@@ -39,6 +39,16 @@ id: MeshData
 
 ### string type {#string-type}
 
+### boolean Active {#boolean-Active}
+
+### boolean ActiveInHierarchy {#boolean-ActiveInHierarchy}
+
+### Object Object {#Object-Object}
+
+### boolean IsDestroyed {#boolean-IsDestroyed}
+
+### string Type {#string-Type}
+
 ### ResourceUsage resourceUsageMode {#ResourceUsage-resourceUsageMode}
 
 ### PrimitiveTopology topology {#PrimitiveTopology-topology}
