--- a/docs/api/meshRenderer.mdx
+++ b/docs/api/meshRenderer.mdx
@@ -17,5 +17,15 @@ id: MeshRenderer
 
 ### string type {#string-type}
 
+### boolean Active {#boolean-Active}
+
+### boolean ActiveInHierarchy {#boolean-ActiveInHierarchy}
+
+### Object Object {#Object-Object}
+
+### boolean IsDestroyed {#boolean-IsDestroyed}
+
+### string Type {#string-Type}
+
 ### Material material {#Material-material}
 
