--- a/docs/api/script.mdx
+++ b/docs/api/script.mdx
@@ -23,6 +23,16 @@ Script component. Not to be confused with the actual [lua table instance](Script
 
 ### string type {#string-type}
 
+### boolean Active {#boolean-Active}
+
+### boolean ActiveInHierarchy {#boolean-ActiveInHierarchy}
+
+### Object Object {#Object-Object}
+
+### boolean IsDestroyed {#boolean-IsDestroyed}
+
+### string Type {#string-Type}
+
 ### table instance {#table-instance}
 
 ### string name {#string-name}
