--- a/docs/api/server.mdx
+++ b/docs/api/server.mdx
@@ -85,6 +85,8 @@ Common scenes
 
 ### integer GetMaxConnections() {#integer-GetMaxConnections}
 
+### nil ResetTracy() {#nil-ResetTracy}
+
 ### boolean GetStartedWithOriginalScripts() {#boolean-GetStartedWithOriginalScripts}
 
 ### nil OverwriteWithOriginalScripts() {#nil-OverwriteWithOriginalScripts}
@@ -96,6 +98,8 @@ Common scenes
 ### nil HttpGet(string, table, userdata) {#nil-HttpGet-string-table-userdata}
 
 ### nil HttpDownload(string, table, userdata) {#nil-HttpDownload-string-table-userdata}
+
+### number GetPing(integer) {#number-GetPing-integer}
 
 ### boolean MoveFileToMontageVoxelsFolder(File, string) {#boolean-MoveFileToMontageVoxelsFolder-File-string}
 
