--- a/docs/api/sky.mdx
+++ b/docs/api/sky.mdx
@@ -17,6 +17,16 @@ id: Sky
 
 ### string type {#string-type}
 
+### boolean Active {#boolean-Active}
+
+### boolean ActiveInHierarchy {#boolean-ActiveInHierarchy}
+
+### Object Object {#Object-Object}
+
+### boolean IsDestroyed {#boolean-IsDestroyed}
+
+### string Type {#string-Type}
+
 ### number cloudScale {#number-cloudScale}
 
 ### number cloudOffset {#number-cloudOffset}
