--- a/docs/api/staticVoxelData.mdx
+++ b/docs/api/staticVoxelData.mdx
@@ -15,6 +15,16 @@ Every scene has only **one** static voxel data and can have multiple dynamic vox
 
 ### string type {#string-type}
 
+### boolean Active {#boolean-Active}
+
+### boolean ActiveInHierarchy {#boolean-ActiveInHierarchy}
+
+### Object Object {#Object-Object}
+
+### boolean IsDestroyed {#boolean-IsDestroyed}
+
+### string Type {#string-Type}
+
 ### string path {#string-path}
 
 ### boolean isLoaded {#boolean-isLoaded}
