--- a/docs/api/transform.mdx
+++ b/docs/api/transform.mdx
@@ -37,6 +37,16 @@ A more customizable version of LookAt, allowing you to specify both the target p
 
 ### string type {#string-type}
 
+### boolean Active {#boolean-Active}
+
+### boolean ActiveInHierarchy {#boolean-ActiveInHierarchy}
+
+### Object Object {#Object-Object}
+
+### boolean IsDestroyed {#boolean-IsDestroyed}
+
+### string Type {#string-Type}
+
 ### Vec3 localPos {#Vec3-localPos}
 The local position of the object relative to its parent
 
