--- a/docs/api/voxelData.mdx
+++ b/docs/api/voxelData.mdx
@@ -30,6 +30,16 @@ The data will only render if the object also has a `VoxelRender` component.
 
 ### string type {#string-type}
 
+### boolean Active {#boolean-Active}
+
+### boolean ActiveInHierarchy {#boolean-ActiveInHierarchy}
+
+### Object Object {#Object-Object}
+
+### boolean IsDestroyed {#boolean-IsDestroyed}
+
+### string Type {#string-Type}
+
 ### string path {#string-path}
 
 ### VoxelDataResource data {#VoxelDataResource-data}
@@ -39,6 +49,8 @@ The voxel data resource that this voxel data is using
 make local copy of voxel data resource if edited 
 
 ### boolean save {#boolean-save}
+
+### boolean editable {#boolean-editable}
 
 ### boolean unpackOnLoad {#boolean-unpackOnLoad}
 
