--- a/docs/api/box.mdx
+++ b/docs/api/box.mdx
@@ -9,6 +9,9 @@ id: Box
 
 ### Box() {#Box}
 
+### Box(Vec3, Quat, Vec3) {#Box-Vec3-Quat-Vec3}
+Centered box
+
 ### Box(Vec3, Vec3) {#Box-Vec3-Vec3}
 
 ### Box(Vec3) {#Box-Vec3}
