--- a/docs/api/object.mdx
+++ b/docs/api/object.mdx
@@ -16,6 +16,10 @@ Get child object by name
 
 ### boolean RemoveParent() {#boolean-RemoveParent}
 
+### boolean IsPrefab() {#boolean-IsPrefab}
+
+### boolean IsPrefab(string) {#boolean-IsPrefab-string}
+
 ### Script AddScript(string, boolean) {#Script-AddScript-string-boolean}
 
 ### MeshData AddMeshData() {#MeshData-AddMeshData}
