--- a/docs/api/sphere.mdx
+++ b/docs/api/sphere.mdx
@@ -10,6 +10,7 @@ id: Sphere
 ### Sphere() {#Sphere}
 
 ### Sphere(Vec3, number) {#Sphere-Vec3-number}
+Centered sphere
 
 ### Sphere(Vec3) {#Sphere-Vec3}
 
