--- a/docs/api/voxelDB.mdx
+++ b/docs/api/voxelDB.mdx
@@ -168,7 +168,7 @@ it should be in range 1-8
 
 ### table GetUsedLayers() {#table-GetUsedLayers}
 
-### Vec3, Vec3 GetBounds() {#Vec3-Vec3-GetBounds}
+### Vec3, Vec3 GetAABounds() {#Vec3-Vec3-GetAABounds}
 World position and size of AABB (axis-aligned bounding box) of the static voxel data
 
 ## Properties
