--- a/docs/api/voxelEdit.mdx
+++ b/docs/api/voxelEdit.mdx
@@ -146,6 +146,7 @@ Various blend modes which you may know from Photoshop. See a list of explanation
 if shape is nil the operation will match all targets 
 
 ### boolean clampToMinVoxelSize {#boolean-clampToMinVoxelSize}
+if ClampToMinVoxelSize is true (it's default), it sets size of shape to at least size of voxel size of target. This can interfere with your box size if it's too small.
 
 ### Transform copySourceTr {#Transform-copySourceTr}
 
