--- a/docs/api/capsule.mdx
+++ b/docs/api/capsule.mdx
@@ -10,6 +10,7 @@ id: Capsule
 ### Capsule() {#Capsule}
 
 ### Capsule(Vec3, Vec3, number, number) {#Capsule-Vec3-Vec3-number-number}
+Capsule between two points
 
 ### Capsule(Vec3, Vec3, number) {#Capsule-Vec3-Vec3-number}
 
