--- a/docs/api/cylinder.mdx
+++ b/docs/api/cylinder.mdx
@@ -10,6 +10,7 @@ id: Cylinder
 ### Cylinder() {#Cylinder}
 
 ### Cylinder(Vec3, Vec3, number, number) {#Cylinder-Vec3-Vec3-number-number}
+Cylinder between two points
 
 ### Cylinder(Vec3, Vec3, number) {#Cylinder-Vec3-Vec3-number}
 
