--- a/docs/api/server.mdx
+++ b/docs/api/server.mdx
@@ -43,6 +43,8 @@ Common scenes
 
 ### Object InsertPrefab(integer) {#Object-InsertPrefab-integer}
 
+### Object InsertPrefab(string) {#Object-InsertPrefab-string}
+
 ### boolean MakePrefab(Object) {#boolean-MakePrefab-Object}
 
 ### nil SaveScene() {#nil-SaveScene}
