--- a/docs/api/voxelRenderer.mdx
+++ b/docs/api/voxelRenderer.mdx
@@ -13,8 +13,10 @@ The data will only render if the object also has a `VoxelData` component with da
 
 ## Methods
 
-### Vec3, Vec3 GetBounds() {#Vec3-Vec3-GetBounds}
+### Vec3, Vec3 GetAABounds() {#Vec3-Vec3-GetAABounds}
 World position and size of AABB (axis-aligned bounding box) of the object
+
+### Vec3, Quat, Vec3 GetBounds() {#Vec3-Quat-Vec3-GetBounds}
 
 ## Properties
 
