Support new class bindings with docs generators

--- a/docs/api/server.mdx
+++ b/docs/api/server.mdx
@@ -43,6 +43,8 @@ Common scenes
 
 ### Object InsertPrefab(integer) {#Object-InsertPrefab-integer}
 
+### Object InsertPrefab(string, string) {#Object-InsertPrefab-string-string}
+
 ### Object InsertPrefab(string) {#Object-InsertPrefab-string}
 
 ### boolean MakePrefab(Object) {#boolean-MakePrefab-Object}
