--- a/docs/api/script.mdx
+++ b/docs/api/script.mdx
@@ -41,3 +41,11 @@ Script component. Not to be confused with the actual [lua table instance](Script
 
 ### boolean syncToClients {#boolean-syncToClients}
 
+### table Instance {#table-Instance}
+
+### string Name {#string-Name}
+
+### string File {#string-File}
+
+### boolean SyncToClients {#boolean-SyncToClients}
+
