--- a/docs/api/scriptInstance.mdx
+++ b/docs/api/scriptInstance.mdx
@@ -173,3 +173,13 @@ end
 
 import { render } from "react-dom"
 
+### Script Component {#Script-Component}
+
+### Object Object {#Object-Object}
+
+### Transform Transform {#Transform-Transform}
+
+### boolean OnServer {#boolean-OnServer}
+
+### boolean OnClient {#boolean-OnClient}
+
