--- a/docs/api/server.mdx
+++ b/docs/api/server.mdx
@@ -91,12 +91,6 @@ Common scenes
 
 ### nil ResetTracy() {#nil-ResetTracy}
 
-### boolean GetStartedWithOriginalScripts() {#boolean-GetStartedWithOriginalScripts}
-
-### nil OverwriteWithOriginalScripts() {#nil-OverwriteWithOriginalScripts}
-
-### boolean GetOriginalScriptsWereSet() {#boolean-GetOriginalScriptsWereSet}
-
 ### nil HttpPost(string, table, string, userdata) {#nil-HttpPost-string-table-string-userdata}
 
 ### nil HttpGet(string, table, userdata) {#nil-HttpGet-string-table-userdata}
@@ -110,10 +104,6 @@ Common scenes
 ### nil MakeUrlForFile(File, userdata, userdata) {#nil-MakeUrlForFile-File-userdata-userdata}
 
 ### AssetManager GetResourceManScene() {#AssetManager-GetResourceManScene}
-
-### AssetManager GetResourceManUI() {#AssetManager-GetResourceManUI}
-
-### AssetManager GetResourceManSettings() {#AssetManager-GetResourceManSettings}
 
 ### number GetLogTime(string) {#number-GetLogTime-string}
 
@@ -172,4 +162,6 @@ Common scenes
 ## Properties
 
 ### integer clientID {#integer-clientID}
+
+### boolean EditMode {#boolean-EditMode}
 
