--- a/docs/api/vec3.mdx
+++ b/docs/api/vec3.mdx
@@ -159,7 +159,15 @@ id: Vec3
 
 ### Vec3 GetRounded(Vec3) {#Vec3-GetRounded-Vec3}
 
+### number Min() {#number-Min}
+
+### number Max() {#number-Max}
+
 ### number DistanceTo(Vec3) {#number-DistanceTo-Vec3}
+
+### number Dist(Vec3) {#number-Dist-Vec3}
+
+### number DistSqr(Vec3) {#number-DistSqr-Vec3}
 
 ### Vec3 Cross(Vec3, Vec3) {#Vec3-Cross-Vec3-Vec3}
 
@@ -176,16 +184,23 @@ id: Vec3
 ### number z {#number-z}
 
 ### Vec3 zero {#Vec3-zero}
+Vec3(0,0,0)
 
 ### Vec3 up {#Vec3-up}
+Vec3(0,1,0)
 
 ### Vec3 right {#Vec3-right}
+Vec3(1,0,0)
 
 ### Vec3 forward {#Vec3-forward}
+Vec3(0,0,-1)
 
 ### Vec3 down {#Vec3-down}
+Vec3(0,-1,0)
 
 ### Vec3 left {#Vec3-left}
+Vec3(-1,0,0)
 
 ### Vec3 back {#Vec3-back}
+Vec3(0,0,1)
 
