--- a/docs/api/client.mdx
+++ b/docs/api/client.mdx
@@ -321,6 +321,18 @@ may not work on all platforms
 
 ### nil ReloadPage(boolean) {#nil-ReloadPage-boolean}
 
+### AudioSource PlaySound(string, Vec3, number, boolean) {#AudioSource-PlaySound-string-Vec3-number-boolean}
+Play sound with asset name, at position, with volume and loop.
+
+### AudioMusic PlayMusic(string, number, boolean)
+Play sound with asset name, with volume and loop
+
+### nil PauseAudio()  {#nil-PauseAudio}
+Pause all playing sounds and music
+
+### nil ResumeAudio() {#nil-ResumeAudio}
+Resume all paused sounds and music
+
 ## Metamethods
 
 ### string __tostring() {#string-tostring}
@@ -360,3 +372,5 @@ Tint the view for this frame or permanently
 
 ### string sysInfo {#string-sysInfo}
 
+### number AudioVolume
+Audio volume in range 0 - 1.
