--- a/docs/api/client.mdx
+++ b/docs/api/client.mdx
@@ -322,10 +322,10 @@ may not work on all platforms
 ### nil ReloadPage(boolean) {#nil-ReloadPage-boolean}
 
 ### AudioSource PlaySound(string, Vec3, number, boolean) {#AudioSource-PlaySound-string-Vec3-number-boolean}
-Play sound with asset name, at position, with volume and loop.
+Play sound with asset name, at position, with volume and loop. Only single channel audio.
 
 ### AudioMusic PlayMusic(string, number, boolean)
-Play sound with asset name, with volume and loop
+Play sound with asset name, with volume and loop. This play stereo music without any position just like normal audio player.
 
 ### nil PauseAudio()  {#nil-PauseAudio}
 Pause all playing sounds and music
