--- a/docs/api/AudioSource.mdx
+++ b/docs/api/AudioSource.mdx
@@ -17,6 +17,12 @@ Stop the sound
 
 ## Properties
 
+### boolean Playing {#boolean-Playing}
+
+### boolean Paused {#boolean-Paused}
+
+### boolean Stopped {#boolean-Stopped}
+
 ### Vec3 Pos {#Vec3-Pos}
 Position of sound in 3D space
 
