--- a/docs/api/AudioMusic.mdx
+++ b/docs/api/AudioMusic.mdx
@@ -1,8 +1,10 @@
---
+---
 title: AudioMusic
 id: AudioMusic
 ---
 `Client`
+
+Returned by ['PlaySound'](./client.mdx#AudioSource-PlaySound-string-Vec3-number-boolean)
 
 ## Methods
 
