--- a/docs/api/client.mdx
+++ b/docs/api/client.mdx
@@ -323,9 +323,11 @@ may not work on all platforms
 
 ### AudioSource PlaySound(string, Vec3, number, boolean) {#AudioSource-PlaySound-string-Vec3-number-boolean}
 Play sound with asset name, at position, with volume and loop. Only single channel audio.
+Return [AudioSource](./AudioSource.mdx)
 
-### AudioMusic PlayMusic(string, number, boolean)
+### AudioMusic PlayMusic(string, number, boolean) {#AudioMusic-PlayMusic-string-number-boolean}
 Play sound with asset name, with volume and loop. This play stereo music without any position just like normal audio player.
+Return [AudioMusic](./AudioMusic.mdx)
 
 ### nil PauseAudio()  {#nil-PauseAudio}
 Pause all playing sounds and music
