--- a/docs/api/AudioSource.mdx
+++ b/docs/api/AudioSource.mdx
@@ -4,6 +4,8 @@ id: AudioSource
 ---
 `Client`
 
+Returned by ['PlaySound'](./client.mdx#AudioSource-PlaySound-string-Vec3-number-boolean)
+
 ## Methods
 
 ### nil Play
