--- a/docs/api/AudioMusic.mdx
+++ b/docs/api/AudioMusic.mdx
@@ -4,7 +4,7 @@ id: AudioMusic
 ---
 `Client`
 
-Returned by ['PlaySound'](./client.mdx#AudioSource-PlaySound-string-Vec3-number-boolean)
+Returned by ['PlayMusic'](./client.mdx#AudioMusic-PlayMusic-string-number-boolean)
 
 ## Methods
 
