--- a/docs/api/hit.mdx
+++ b/docs/api/hit.mdx
@@ -5,7 +5,7 @@ id: Hit
 `Client`
 `Server`
 
-Returned by [raycasts]](Collision#table-Raycast).
+Returned by [raycasts](Collision#table-Raycast).
 
 ## Properties
 
@@ -18,6 +18,8 @@ Returned by [raycasts]](Collision#table-Raycast).
 ### Object object {#Object-object}
 
 ### number distance {#number-distance}
+
+### string material {#string-material}
 
 ### HitType type {#HitType-type}
 
