--- a/docs/api/scene.mdx
+++ b/docs/api/scene.mdx
@@ -109,6 +109,10 @@ Also see [`Scene:MakeNameValid`](#string-MakeNameValid-string)
 
 ### boolean ResetPrefab(Object) {#boolean-ResetPrefab-Object}
 
+### nil ResetAllPrefabs() {#nil-ResetAllPrefabs}
+
+### nil UnpackPrefab(Object) {#nil-UnpackPrefab-Object}
+
 ### nil RebuildLighting() {#nil-RebuildLighting}
 
 ### LightingUpdate CreateLighting(string, string) {#LightingUpdate-CreateLighting-string-string}
@@ -126,4 +130,10 @@ Also see [`Scene:MakeNameValid`](#string-MakeNameValid-string)
 ### LightingUpdate lighting {#LightingUpdate-lighting}
 
 ### LightingUpdate objectLighting {#LightingUpdate-objectLighting}
+
+### boolean SimulationPaused {#boolean-SimulationPaused}
+
+### number SimulationSpeed {#number-SimulationSpeed}
+
+### number Gravity {#number-Gravity}
 
