--- a/docs/api/server.mdx
+++ b/docs/api/server.mdx
@@ -59,6 +59,8 @@ Common scenes
 
 ### nil ReloadScene() {#nil-ReloadScene}
 
+### nil BackupMontage() {#nil-BackupMontage}
+
 ### nil OnLuaLog() {#nil-OnLuaLog}
 
 ### boolean IsClient() {#boolean-IsClient}
@@ -164,4 +166,6 @@ Common scenes
 ### integer clientID {#integer-clientID}
 
 ### boolean EditMode {#boolean-EditMode}
+
+### boolean ModeChangeReloadGeom {#boolean-ModeChangeReloadGeom}
 
