--- a/docs/api/client.mdx
+++ b/docs/api/client.mdx
@@ -109,6 +109,8 @@ Time for a network message to travel from client to server and back
 
 ### number GetLogValue(string) {#number-GetLogValue-string}
 
+### number GetLogValue(string, number) {#number-GetLogValue-string-number}
+
 ### nil SetLogValue(string, number) {#nil-SetLogValue-string-number}
 
 ### nil SetStrLogValue(string, string) {#nil-SetStrLogValue-string-string}
@@ -321,20 +323,6 @@ may not work on all platforms
 
 ### nil ReloadPage(boolean) {#nil-ReloadPage-boolean}
 
-### AudioSource PlaySound(string, Vec3, number, boolean) {#AudioSource-PlaySound-string-Vec3-number-boolean}
-Play sound with asset name, at position, with volume and loop. Only single channel audio.
-Return [AudioSource](./AudioSource.mdx)
-
-### AudioMusic PlayMusic(string, number, boolean) {#AudioMusic-PlayMusic-string-number-boolean}
-Play sound with asset name, with volume and loop. This play stereo music without any position just like normal audio player.
-Return [AudioMusic](./AudioMusic.mdx)
-
-### nil PauseAudio()  {#nil-PauseAudio}
-Pause all playing sounds and music
-
-### nil ResumeAudio() {#nil-ResumeAudio}
-Resume all paused sounds and music
-
 ## Metamethods
 
 ### string __tostring() {#string-tostring}
@@ -358,6 +346,24 @@ params: capsuleStart, capsuleEnd, capsuleRadius, velocity, size
 ### nil SetScreenColor(Vec4, boolean) {#nil-SetScreenColor-Vec4-boolean}
 Tint the view for this frame or permanently
 
+### AudioSource PlaySound(string) {#AudioSource-PlaySound-string}
+
+### AudioSource PlaySound(string, Vec3, number, boolean) {#AudioSource-PlaySound-string-Vec3-number-boolean}
+Play sound with asset name, at position, with volume and loop. Only single channel audio.
+Return [AudioSource](./AudioSource.mdx)
+
+### AudioMusic PlayMusic(string) {#AudioMusic-PlayMusic-string}
+
+### AudioMusic PlayMusic(string, number, boolean) {#AudioMusic-PlayMusic-string-number-boolean}
+Play sound with asset name, with volume and loop. This play stereo music without any position just like normal audio player.
+Return [AudioMusic](./AudioMusic.mdx)
+
+### nil PauseAudio() {#nil-PauseAudio}
+Pause all playing sounds and music
+
+### nil ResumeAudio() {#nil-ResumeAudio}
+Resume all paused sounds and music
+
 ## Properties
 
 ### integer clientID {#integer-clientID}
@@ -374,5 +380,5 @@ Tint the view for this frame or permanently
 
 ### string sysInfo {#string-sysInfo}
 
-### number AudioVolume
+### number AudioVolume {#number-AudioVolume}
 Audio volume in range 0 - 1.
