--- a/docs/api/voxelRenderer.mdx
+++ b/docs/api/voxelRenderer.mdx
@@ -7,11 +7,23 @@ id: VoxelRenderer
 
 The data will only render if the object also has a `VoxelData` component with data assigned.
 
+## Methods
+
+### nil AddImpulse(Vec3, Vec3) {#nil-AddImpulse-Vec3-Vec3}
+
+### nil AddAngularImpulse(Vec3) {#nil-AddAngularImpulse-Vec3}
+
+### nil AddForce(Vec3) {#nil-AddForce-Vec3}
+
+### nil AddTorque(Vec3) {#nil-AddTorque-Vec3}
+
+### nil AddAcceleration(Vec3) {#nil-AddAcceleration-Vec3}
+
+### nil AddAngularAcceleration(Vec3) {#nil-AddAngularAcceleration-Vec3}
+
 ## Metamethods
 
 ### boolean __eq(VoxelRenderer, VoxelRenderer) {#boolean-eq-VoxelRenderer-VoxelRenderer}
-
-## Methods
 
 ### Vec3, Vec3 GetAABounds() {#Vec3-Vec3-GetAABounds}
 World position and size of AABB (axis-aligned bounding box) of the object
@@ -53,3 +65,23 @@ Render with a tint color
 Receive transform(pos, rot scale) to render with from server. By default this is true. 
 If you set this to false, you will need to manually set the transform of the object on the client side.
 This is useful for making objects respond immediately if something happened on the client side i.e. input
+### boolean Simulate {#boolean-Simulate}
+
+### boolean SimulationPaused {#boolean-SimulationPaused}
+
+### Vec3 Velocity {#Vec3-Velocity}
+
+### Vec3 AngularVelocity {#Vec3-AngularVelocity}
+
+### number Mass {#number-Mass}
+
+### Vec3 Inertia {#Vec3-Inertia}
+
+### number Friction {#number-Friction}
+
+### number Restitution {#number-Restitution}
+
+### number Drag {#number-Drag}
+
+### number AngularDrag {#number-AngularDrag}
+
