--- a/docs/api/client.mdx
+++ b/docs/api/client.mdx
@@ -352,6 +352,10 @@ Tint the view for this frame or permanently
 Play sound with asset name, at position, with volume and loop. Only single channel audio.
 Return [AudioSource](./AudioSource.mdx)
 
+### AudioSource PlaySound(string, Vec3, number) {#AudioSource-PlaySound-string-Vec3-number}
+
+### AudioSource PlaySound(string, Vec3) {#AudioSource-PlaySound-string-Vec3}
+
 ### AudioMusic PlayMusic(string) {#AudioMusic-PlayMusic-string}
 
 ### AudioMusic PlayMusic(string, number, boolean) {#AudioMusic-PlayMusic-string-number-boolean}
@@ -382,3 +386,7 @@ Resume all paused sounds and music
 
 ### number AudioVolume {#number-AudioVolume}
 Audio volume in range 0 - 1.
+### number SoundVolume {#number-SoundVolume}
+
+### number MusicVolume {#number-MusicVolume}
+
