--- a/docs/api/input.mdx
+++ b/docs/api/input.mdx
@@ -113,6 +113,8 @@ int passed is the unique ID of that touch obtained i.e. from Input:Fingers() or 
 
 ### Vec3, Quat VRControllerTransform(integer, Space) {#Vec3-Quat-VRControllerTransform-integer-Space}
 
+### Vec3, Quat VRPointerTransform(integer, Space) {#Vec3-Quat-VRPointerTransform-integer-Space}
+
 ### userdata Gamepads() {#userdata-Gamepads}
 
 ### userdata GetActiveGamepad() {#userdata-GetActiveGamepad}
