--- a/docs/api/voxelEdit.mdx
+++ b/docs/api/voxelEdit.mdx
@@ -137,6 +137,8 @@ parameters specify "cone" - two positions and end radius
 
 ### nil SetVoxelDataResourceMaterial(VoxelDataResource, string) {#nil-SetVoxelDataResourceMaterial-VoxelDataResource-string}
 
+### nil BackupSurfaceAttributes() {#nil-BackupSurfaceAttributes}
+
 ## Properties
 
 ### boolean blendEnable {#boolean-blendEnable}
@@ -199,6 +201,8 @@ if ClampToMinVoxelSize is true (it's default), it sets size of shape to at least
 ### boolean usesPbr {#boolean-usesPbr}
 
 ### CopyOperation copyOperation {#CopyOperation-copyOperation}
+
+### InsertOperation insertOperation {#InsertOperation-insertOperation}
 
 ### integer kernelType {#integer-kernelType}
 0 = Smooth 7x5x7
