--- a/docs/api/server.mdx
+++ b/docs/api/server.mdx
@@ -15,6 +15,8 @@ This class is only available on server
 
 ### string GetUserID(integer) {#string-GetUserID-integer}
 
+### boolean IsVRClient(integer) {#boolean-IsVRClient-integer}
+
 ### nil DisconnectClient(integer) {#nil-DisconnectClient-integer}
 
 ### integer GetScriptsVersion() {#integer-GetScriptsVersion}
