Document new apis, debugging

--- a/docs/api/AudioMusic.mdx
+++ b/docs/api/AudioMusic.mdx
@@ -4,7 +4,7 @@ id: AudioMusic
 ---
 `Client`
 
-Returned by ['PlayMusic'](./client.mdx#AudioMusic-PlayMusic-string-number-boolean)
+Returned by [`Client:PlayMusic()`](./client.mdx#AudioMusic-PlayMusic-string-number-boolean)
 
 ## Methods
 
