--- a/docs/api/AudioSource.mdx
+++ b/docs/api/AudioSource.mdx
@@ -1,10 +1,10 @@
---
+---
 title: AudioSource
 id: AudioSource
 ---
 `Client`
 
-Returned by ['PlaySound'](./client.mdx#AudioSource-PlaySound-string-Vec3-number-boolean)
+Returned by [`Client:PlaySound()`](./client.mdx#AudioSource-PlaySound-string-Vec3-number-boolean)
 
 ## Methods
 
