--- a/docs/api/collision.mdx
+++ b/docs/api/collision.mdx
@@ -5,6 +5,12 @@ id: Collision
 `Client`
 `Server`
 
+:::warning Deprecated
+The collision functions in this class are old and may not correctly work.
+Instead use `Cast:Ray()` and `Collide()`
+:::
+
+
 ## Constructors
 
 ### Collision() {#Collision}
