--- a/docs/api/voxelDB.mdx
+++ b/docs/api/voxelDB.mdx
@@ -5,8 +5,8 @@ id: VoxelDB
 `Client`
 `Server`
 
-:::info
-The voxel edit functions in this class are old and may not correctly work. Instead use [VoxelEdit](VoxelEdit).
+:::warning Deprecated
+The voxel edit functions in this class are old and may not correctly work. Instead use [Vox](/docs/manual/20-scripting/examples/Voxel-Edits.mdx).
 :::
 
 ## Methods
