--- a/docs/api/voxelEdit.mdx
+++ b/docs/api/voxelEdit.mdx
@@ -5,6 +5,10 @@ id: VoxelEdit
 `Client`
 `Server`
 
+:::warning Deprecated
+The voxel edit functions in this class are old and may not correctly work. Instead use [Vox](/docs/manual/20-scripting/examples/Voxel-Edits.mdx).
+:::
+
 :::info Server Only
  Currently voxel edits can only be done on the server side.
 :::
