--- a/docs/api/client.mdx
+++ b/docs/api/client.mdx
@@ -350,7 +350,7 @@ Tint the view for this frame or permanently
 
 ### AudioSource PlaySound(string, Vec3, number, boolean) {#AudioSource-PlaySound-string-Vec3-number-boolean}
 Play sound with asset name, at position, with volume and loop. Only single channel audio.
-Returns [AudioSource](./audioSource.mdx)
+Returns [AudioSource](./AudioSource.mdx)
 
 ### AudioSource PlaySound(string, Vec3, number) {#AudioSource-PlaySound-string-Vec3-number}
 
@@ -360,7 +360,7 @@ Returns [AudioSource](./audioSource.mdx)
 
 ### AudioMusic PlayMusic(string, number, boolean) {#AudioMusic-PlayMusic-string-number-boolean}
 Play sound with asset name, with volume and loop. This play stereo music without any position just like normal audio player.
-Returns [AudioMusic](./audioMusic.mdx)
+Returns [AudioMusic](./AudioMusic.mdx)
 
 ### nil PauseAudio() {#nil-PauseAudio}
 Pause all playing sounds and music
