Small upates to docs

--- a/docs/manual/10-getting-started/20-camera-and-editor-basics.mdx
+++ b/docs/manual/10-getting-started/20-camera-and-editor-basics.mdx
@@ -6,7 +6,8 @@ The camera has two modes `Fly` and `Orbit`.
 * `Orbit Mode` focuses and rotates the camera around one point. 
 
 Use the mouse buttons, mouse wheel and `WASD` to control the camera. Press `Shift` to move faster. 
-The tools panel has a `Reset Position` button to reset the camera.
+The tools panel has a `Reset Position` button to reset the camera. 
+Press `Middle Mouse Button` to focus the camera on the clicked point.
 
 ## Editing Voxels
 Edit voxels with the tools in the `Brush` section of the tools panel in the top left. 
