--- a/docs/manual/10-getting-started/29-shortcuts.mdx
+++ b/docs/manual/10-getting-started/29-shortcuts.mdx
@@ -19,6 +19,7 @@
 
 * `Shift` Move faster
 * `Q`/`E` Move camera on alternative axis
+* `Middle Mouse Button` Focus the camera on the clicked point
 
 ## Shape selection
 
