--- a/docs/manual/20-scripting/01-getting-started.mdx
+++ b/docs/manual/20-scripting/01-getting-started.mdx
@@ -3,3 +3,10 @@
 Watch this video for an intro to scripting and the editor
 
 <iframe width="100%" height="500" src="https://www.youtube.com/embed/u8sSttbk7g8?si=KIL_B8CDWVXg68cQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" fullscreen></iframe>
+
+
+## Lua
+
+Lua is the scripting language used in Atomontage. It is a powerful, efficient scripting language that is used for scripting game logic, ui and also the editor.
+
+Lua is easy to learn! A good resource to learn Lua is [Learn Lua in 5 minutes](https://gist.github.com/roalcantara/49de782ab32385db78357192e6750c8e) 
