--- a/docs/manual/20-scripting/examples/Voxel-Edits.mdx
+++ b/docs/manual/20-scripting/examples/Voxel-Edits.mdx
@@ -59,8 +59,8 @@ Vox:Subtract(obs)
    :Run()
 ```
 
-```lua title="Subtact from static only"
-Vox:Subtact(gun)
+```lua title="Subtract from static only"
+Vox:Subtract(gun)
    :ForceStatic()
    :Run()
 ```
